<resources>
    <string name="app_name">Органайзер</string>
    <string name="action_settings">Налаштування</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="title_activity_telephone">Телефонний довідник</string>
    <string name="new_telephone_title">Створити новий контакт</string>
    <string name="telephone_name">Ім\'я</string>
    <string name="telephone_number_form">Номер телефону</string>
    <string name="new_telephone_button">Створити</string>
    <string name="edit_telephone_button_save">Зберегти</string>
    <string name="edit_telephone_button_delete">Видалити</string>
    <string name="icon_voice_content_description">Іконка контакту</string>
    <string name="dialogTitle">Видалити?</string>
    <string name="dialogMassage">Ви впевнені , що хочете видалити контакт?</string>
    <string name="dialogYes">Так</string>
    <string name="dialogNo">Ні</string>
    <string name="search">Пошук</string>
    <string name="main_telephone_button">Телефонний довідник</string>
    <string name="main_notes_button">Доручення</string>
    <string name="title_activity_notes">Доручення</string>
    <string name="title_activity_edit_notes">Доручення</string>
    <string name="title">Заголовок</string>
    <string name="text">Текст</string>
    <string name="title_activity_calendar">Календар</string>
    <string name="calendar_new_title">Назва</string>
    <string name="calendar_new_adres">Адреса</string>
    <string name="calendar_new_data">Дата</string>
    <string name="calendar_new_text">Створити нову подію</string>
</resources>