<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".telephone.NewTelephone">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/telephone_edit_name"
            android:layout_width="230dp"
            android:layout_height="51dp"
            android:layout_marginTop="25dp"
            android:ems="10"
            android:hint="@string/telephone_name"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="211dp"
            android:layout_height="42dp"
            android:layout_marginTop="25dp"
            android:text="@string/new_telephone_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/telephone_edit_number"
            android:layout_width="230dp"
            android:layout_height="58dp"
            android:layout_marginTop="25dp"
            android:ems="10"
            android:hint="@string/telephone_number_form"
            android:inputType="number|phone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/telephone_edit_name" />

        <Button
            android:id="@+id/button"
            android:layout_width="154dp"
            android:layout_height="54dp"
            android:layout_marginTop="25dp"
            android:text="@string/new_telephone_button"
            app:layout_constraintEnd_toEndOf="parent"
            android:onClick="onCreateNewContact"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/telephone_edit_number" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>