<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".main.MainActivity">

    <Button
        android:id="@+id/button_calendar"
        android:layout_width="177dp"
        android:layout_height="93dp"
        android:layout_marginBottom="10dp"
        android:text="@string/title_activity_calendar"
        android:onClick="onClickCalendar"
        app:layout_constraintBottom_toTopOf="@+id/button_telephones"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_telephones"
        android:layout_width="147dp"
        android:layout_height="69dp"
        android:text="@string/main_notes_button"
        android:onClick="onClickNotes"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_notes"
        android:layout_width="145dp"
        android:layout_height="68dp"
        android:layout_marginTop="10dp"
        android:onClick="onClickTelephone"
        android:text="@string/main_telephone_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_telephones" />
</androidx.constraintlayout.widget.ConstraintLayout>